--- a/Lesson_1/Lesson_2/Basics.ipynb
+++ b/Lesson_1/Lesson_2/Basics.ipynb
@@ -7,12 +7,12 @@
    "source": [
     "    Операторы\n",
     "1. Арифметические\n",
-    "2. Сравнительные \n",
+    "2. Сравнительные  \n",
     "3. Присваиваемые a=3\n",
     "4. Логические or  and  \n",
     "5. Битовые    |    &\n",
     "6. Принадлежности 'e' in 'hello'\n",
-    "7. Идентичности \n",
+    "7. Идентичности a==3\n",
     "a='asdgfa'\n",
     "b=a\n",
     "print(a is b) → true\n",
@@ -21,21 +21,123 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "efa03874",
+   "metadata": {},
+   "source": [
+    "3. Составные присваиватели\n",
+    "a=1\n",
+    "1=a+1\n",
+    "print(a)\n",
+    "a++"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "201c3cd6",
+   "execution_count": null,
+   "id": "6b569d2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2013437415.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[50]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m| 3. Составные присваиватели\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3. Составные присваиватели\n",
+    "a=1\n",
+    "a=a+1\n",
+    "a+=1\n",
+    "print(a)\n",
+    "a*=2\n",
+    "print(a)\n",
+    "a-=2\n",
+    "print(a)\n",
+    "a**=2\n",
+    "print(a)\n",
+    "a/=2\n",
+    "print(a)\n",
+    "a//=3\n",
+    "print(a)\n",
+    "a%=1.5\n",
+    "print(a)\n",
+    "\n",
+    "stroka='text '\n",
+    "stroka+='new '\n",
+    "print(stroka)\n",
+    "stroka*=3\n",
+    "print(stroka)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "49ccd81e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "True\n",
+      "False\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#6. Операторы принадлежности\n",
+    "print('e' in 'hello')\n",
+    "print('n' in 'hello')\n",
+    "3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "ab0ec546",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140735778530248\n",
+      "140735778530248\n",
+      "2053701808880\n",
+      "2053701808784\n",
+      "True\n",
+      "False\n"
      ]
     }
    ],
    "source": [
-    "print('e' in 'hello')\n"
+    "#7. Операторы идентичности\n",
+    "# is, is not\n",
+    "b=2\n",
+    "print(id(b))\n",
+    "c=2\n",
+    "print(id(c))\n",
+    "d=301\n",
+    "print(id(d))\n",
+    "e=301\n",
+    "print(id(e))\n",
+    "\n",
+    "print(b is c)\n",
+    "print(d is e)"
    ]
   }
  ],
@@ -55,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
