--- a/Lesson_1/Lesson_2/Basics.ipynb
+++ b/Lesson_1/Lesson_2/Basics.ipynb
@@ -34,16 +34,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "6b569d2a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2013437415.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[50]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m| 3. Составные присваиватели\u001b[39m\n    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "6\n",
+      "4\n",
+      "16\n",
+      "8.0\n",
+      "2.0\n",
+      "0.5\n",
+      "text new \n",
+      "text new text new text new \n"
      ]
     }
    ],
