--- a/remote_rep/Lesson_1/Lesson_2/Lesson_3/Lesson_4/Lesson_5/Conditions and loop.ipynb
+++ b/remote_rep/Lesson_1/Lesson_2/Lesson_3/Lesson_4/Lesson_5/Conditions and loop.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4273e88d",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": null,
    "id": "6e486ce9",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
     "           print(oword)\n",
     "    else:\n",
     "            owords.append(oword)       \n",
-    "print(' '.join(owords)) #We can make from array - list due join  \n"
+    "print(' '.join(owords)) #We can make from array - list due join  "
    ]
   }
  ],
