--- a/remote_rep/Lesson_1/Lesson_2/Lesson_3/Lesson_4/Lesson_5/Lesson_6/Lesson_7/Lesson_8/Lesson_9/Lesson_10/Classes.ipynb
+++ b/remote_rep/Lesson_1/Lesson_2/Lesson_3/Lesson_4/Lesson_5/Lesson_6/Lesson_7/Lesson_8/Lesson_9/Lesson_10/Classes.ipynb
@@ -7,15 +7,23 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'High_school' object has no attribute 'direction_allowed_values'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 47\u001b[39m\n\u001b[32m     42\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33m'\u001b[39m\u001b[33mGo slowly\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     46\u001b[39m a1_class=Primary_school(\u001b[33m'\u001b[39m\u001b[33m1A\u001b[39m\u001b[33m'\u001b[39m, \u001b[32m25\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m47\u001b[39m b6_class=\u001b[43mHigh_school\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m6B\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m24\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mfor_lasdan\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     49\u001b[39m \u001b[38;5;28mprint\u001b[39m(a1_class.school_num)\n\u001b[32m     50\u001b[39m \u001b[38;5;28mprint\u001b[39m(a1_class.floor)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 38\u001b[39m, in \u001b[36mHigh_school.__init__\u001b[39m\u001b[34m(self, title, count, direction)\u001b[39m\n\u001b[32m     36\u001b[39m \u001b[38;5;28msuper\u001b[39m().\u001b[34m__init__\u001b[39m(title, count)\n\u001b[32m     37\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m direction \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m.allowed_directions:\n\u001b[32m---> \u001b[39m\u001b[32m38\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mПараметр должен быть одним из: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mdirection_allowed_values\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     39\u001b[39m \u001b[38;5;28mself\u001b[39m.direction = direction\n",
-      "\u001b[31mAttributeError\u001b[39m: 'High_school' object has no attribute 'direction_allowed_values'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2 floor\n",
+      "Legenda\n",
+      "11\n",
+      "Sitting, writing, thinking and remembering\n",
+      "\n",
+      "Go carefully\n",
+      "Sitting, writing, thinking and remembering\n",
+      "25\n",
+      "\n",
+      "Go slowly\n",
+      "Sitting, writing, thinking and remembering\n",
+      "24\n",
+      "for_lan\n"
      ]
     }
    ],
@@ -83,17 +91,8 @@
     "b6_class.move()\n",
     "b6_class.study()\n",
     "print(b6_class.count)\n",
-    "print(b6_class.direction)\n",
-    "\n"
+    "print(b6_class.direction)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ddc62edc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
