--- a/OOP/OOP.ipynb
+++ b/OOP/OOP.ipynb
@@ -127,6 +127,67 @@
    "execution_count": null,
    "id": "90f86e31",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Greece\n",
+      "28\n",
+      "True\n",
+      "\n",
+      "-72\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "class CountryData:\n",
+    "    def __init__( self,filename):\n",
+    "        self.filename = filename\n",
+    "        self.data=self.filereading()\n",
+    "        self.country = self.data['Country']\n",
+    "        self._temperature = self.data['avg_temp'] # Нижнее подчеркивание делает защищенным к изменнеию атрибута напрямую\n",
+    "        #двойное нижнее подчеркивание делает атрибут приватным и в случае обращения к нему типа print(russia.__temperature) \n",
+    "        # будет ошибка 25\n",
+    "        self.comfort = self.comfort()\n",
+    "        \n",
+    "    @property                       # Добавив пропертю - мы не сможем изменять, но сможем распечатывать и получать значение\n",
+    "    def temperature(self):\n",
+    "        return self._temperature\n",
+    "        \n",
+    "    def filereading(self):\n",
+    "        file_data = open(self.filename,'r') # r - чтение, w - запись, a - дописывание файла. По дефолту если нричего не писать будет r\n",
+    "        data = json.load(file_data) # load сам преобразует в json и загружает данные\n",
+    "        file_data.close()\n",
+    "        return data \n",
+    "    \n",
+    "    def comfort(self):\n",
+    "        return self._temperature > 20 and self._temperature <30 \n",
+    "    \n",
+    "\n",
+    "greece = CountryData('gre.txt')\n",
+    "print(greece.country)\n",
+    "print(greece.temperature)\n",
+    "print(greece.comfort)\n",
+    "\n",
+    "class CountryDataPlusMinTemp(CountryData):\n",
+    "    def __init__(self,filiename):\n",
+    "        super().__init__(filiename)\n",
+    "        self.min_temp=self.data['min_temp']\n",
+    "        \n",
+    "russia = CountryDataPlusMinTemp('rus.txt')\n",
+    "\n",
+    "print()\n",
+    "print(russia.min_temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7942ad79",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
